# ProjectNight

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DEVLOG.md  README.md  run_client.bat  run_client_X3.bat  run_server.bat  vcpkg.json
NightClient/: CMakeLists.txt  CMakePresets.json  ChatClientFrame.cpp  ChatClientFrame.h  ChatProtocolClient.cpp  ChatProtocolClient.h  NightClient.cpp  NightClient.h
NightCommon/: CMakeLists.txt
NightCommon/NightProtocol/: ProtocolUtil.h  messages_generated.h
NightNetwork/: CMakeLists.txt  README.md
NightNetwork/include/NightNetwork/: Client.h  Packet.h  Server.h
NightNetwork/src/: BufferPool.h  Client.cpp  Protocol.h  Server.cpp  Session.cpp  Session.h  TransportDetail.h
NightServer/: CMakeLists.txt  CMakePresets.json  GameLogicSystem.cpp  GameLogicSystem.h  NetworkSystem.cpp  NetworkSystem.h  NightServer.cpp  NightServer.h  RoomSystem.cpp  RoomSystem.h  ServerTypes.h
NightServer/NightNetwork/: Server.cpp  Server.h  Session.cpp  Session.h
schema/: README.md  compile.bat  messages.fbs
scripts/: compile.bat  publish_linux_docker.bat  run_client.bat  run_server.bat
tests/: CMakeLists.txt  ProtocolTests.cpp
